--- a/src/app/sign-in/register/register.component.html
+++ b/src/app/sign-in/register/register.component.html
@@ -3,60 +3,46 @@
     <a class="nav-link active" aria-current="page" routerLink="/adminHome">&nbsp; &nbsp; Back</a>
   </li>
 </ul>
+
 <section class="vh-100">
-    <div class="container py-5 h-100">
-      <div class="row d-flex align-items-center justify-content-center h-100">
-        <div class="col-md-8 col-lg-7 col-xl-6">
-          <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.svg"
-            class="img-fluid" alt="Phone image">
-        </div>
-        <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
-            <form [formGroup]="registerForm" (ngSubmit)="registerUser(registerForm.value)" >
-            <div class="form-outline mb-4">
-                <input type="text" id="form1Example13" class="form-control form-control-lg" formControlName="userName"/>
-                <label class="form-label" for="form1Example13">User Name</label>
-              </div>
-            <div class="form-outline mb-4">
-              <input type="password" id="form1Example23" class="form-control form-control-lg" formControlName="password"/>
-              <label class="form-label" for="form1Example23">Password</label>
+  <div class="container py-5 h-100">
+    <div class="row d-flex align-items-center justify-content-center h-100">
+      <div class="col-md-8 col-lg-7 col-xl-6">
+        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.svg"
+          class="img-fluid" alt="Phone image">
+      </div>
+      <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
+        <form [formGroup]="registerForm" (ngSubmit)="registerUser()" novalidate>
+          <div class="form-outline mb-4">
+            <input type="text" id="form1Example13" class="form-control form-control-lg" formControlName="userName"/>
+            <label class="form-label" for="form1Example13">User Name</label>
+            <div *ngIf="userName.invalid && (userName.dirty || userName.touched)">
+              <small class="text-danger" *ngIf="userName.errors?.required">User Name is required.</small>
+              <small class="text-danger" *ngIf="userName.errors?.minlength">User Name must be at least 5 characters long.</small>
             </div>
-            <div class="form-outline mb-4">
-                <input type="number" id="form1Example23" class="form-control form-control-lg" formControlName="customerId"/>
-                <label class="form-label" for="form1Example23">Enter Your Customer Id</label>
-              </div>
-            <!-- <div class="form-check form-switch"> -->
-                <!-- <input class="form-check-input" type="checkbox" formControlName="roleId" (click)="toggleValue()"> -->
-
-                <!-- <label class="form-check-label" for="flexSwitchCheckDefault">Click IF Admin</label> -->
-              <!-- </div> -->
-  
-            <!-- Submit button -->
-            <!-- <button (click)="saveUser()">Save User</button> -->
-            <!-- register.component.html -->
-
-<!-- Update the (click) event to call registerUser -->
-<button (click)="registerUser(registerForm.value)" type="submit" class="btn btn-primary btn-lg btn-block"><a  
-  style="color: #2832a3;">Register </a></button>
-
-  
-            <!-- routerLink="/createCustomer" <div class="divider d-flex align-items-center my-4">
-              <p class="text-center fw-bold mx-3 mb-0 text-muted">OR</p>
+          </div>
+          <div class="form-outline mb-4">
+            <input type="password" id="form1Example23" class="form-control form-control-lg" formControlName="password"/>
+            <label class="form-label" for="form1Example23">Password</label>
+            <div *ngIf="password.invalid && (password.dirty || password.touched)">
+              <small class="text-danger" *ngIf="password.errors?.required">Password is required.</small>
+              <small class="text-danger" *ngIf="password.errors?.minlength">Password must be at least 8 characters long.</small>
+              <small class="text-danger" *ngIf="password.errors?.pattern">Password must include at least one uppercase letter, one lowercase letter, and one numeric digit.</small>
             </div>
-            <a class="btn btn-primary btn-lg btn-block" style="background-color: #3b5998" href="#!"
-              role="button">
-              <i class="fab fa-facebook-f me-2"></i>Facebook
-            </a>&nbsp;&nbsp;&nbsp;
-            <a class="btn btn-primary btn-lg btn-block" style="background-color: #3b5998" href="#!"
-              role="button">&nbsp;&nbsp;
-              <i class="fab fa-facebook-f me-2"></i>&nbsp;Google &nbsp;&nbsp;
-            </a>&nbsp;&nbsp;
-            <a class="btn btn-primary btn-lg btn-block" style="background-color: #55acee" href="#!"
-              role="button">
-              <i class="fab fa-twitter me-2"></i>&nbsp;&nbsp;Twitter&nbsp;&nbsp;&nbsp;&nbsp;</a> -->
-  
-          </form>
-         <!-- <h6><a routerLink="/createCustomer">createCustomer</a></h6>  -->
-        </div>
+          </div>
+          <div class="form-outline mb-4">
+            <input type="number" id="form1Example23" class="form-control form-control-lg" formControlName="customerId"/>
+            <label class="form-label" for="form1Example23">Enter Your Customer Id</label>
+            <div *ngIf="customerId.invalid && (customerId.dirty || customerId.touched)">
+              <small class="text-danger" *ngIf="customerId.errors?.required">Customer ID is required.</small>
+            </div>
+          </div>
+
+          <button type="submit" class="btn btn-primary btn-lg btn-block">
+            <a style="color: #2832a3;">Register</a>
+          </button>
+        </form>
       </div>
     </div>
-  </section>
+  </div>
+</section>
