--- a/src/app/User-Folder/create-customer/create-customer.component.html
+++ b/src/app/User-Folder/create-customer/create-customer.component.html
@@ -1,73 +1,68 @@
-<!-- <h1>Enter Valid details</h1>
-<form [formGroup]="customerForm" (ngSubmit)="customerData(customerForm.value)">
-    <input type="text" formControlName="firstName" placeholder="Enter First Name"><br>
-    <input type="text" formControlName="lastName" placeholder="Enter Last name"><br>
-    <input type="text" formControlName="email" placeholder="Enter Email"><br>
-    <input type="number" formControlName="roleId" placeholder="RoleID"><br>
-     <input type="text" formControlName="transactionType" placeholder="TransactionType"><br> -->
-    <!--<button>Create</button>
-</form> -->
-<!-- Section: Design Block -->
 <section class="text-center">
-    <!-- Background image -->
-    <div class="p-5 bg-image" style="
-          background-image: url('https://mdbootstrap.com/img/new/textures/full/171.jpg');
-          height: 300px;
-          "></div>
-    <!-- Background image -->
-  
-    <div class="card mx-4 mx-md-5 shadow-5-strong" style="
-          margin-top: -100px;
-          background: hsla(0, 0%, 100%, 0.8);
-          backdrop-filter: blur(30px);
-          ">
-      <div class="card-body py-5 px-md-5">
-  
-        <div class="row d-flex justify-content-center">
-          <div class="col-lg-8">
-            <h2 class="fw-bold mb-5">Sign up now</h2>
-            <form [formGroup]="customerForm" (ngSubmit)="customerData(customerForm.value)">
-              <!-- 2 column grid layout with text inputs for the first and last names -->
-              <div class="row">
-                <div class="col-md-6 mb-4">
-                  <div class="form-outline">
-                    <input type="text" formControlName="firstName" id="form3Example1" class="form-control" />
-                    <label class="form-label" for="form3Example1">First name</label>
-                  </div>
-                </div>
-                <div class="col-md-6 mb-4">
-                  <div class="form-outline">
-                    <input type="text" formControlName="lastName" id="form3Example2" class="form-control" />
-                    <label class="form-label" for="form3Example2">Last name</label>
+  <!-- Background image -->
+  <div class="p-5 bg-image" style="
+    background-image: url('https://mdbootstrap.com/img/new/textures/full/171.jpg');
+    height: 300px;
+  "></div>
+  <!-- Background image -->
+
+  <div class="card mx-4 mx-md-5 shadow-5-strong" style="
+    margin-top: -100px;
+    background: hsla(0, 0%, 100%, 0.8);
+    backdrop-filter: blur(30px);
+  ">
+    <div class="card-body py-5 px-md-5">
+
+      <div class="row d-flex justify-content-center">
+        <div class="col-lg-8">
+          <h2 class="fw-bold mb-5">Sign up now</h2>
+          <form [formGroup]="customerForm" (ngSubmit)="customerData(customerForm.value)">
+            <div class="row">
+              <div class="col-md-6 mb-4">
+                <div class="form-outline">
+                  <input type="text" formControlName="firstName" id="form3Example1" class="form-control" />
+                  <label class="form-label" for="form3Example1">First name</label>
+                  <div *ngIf="formControls.firstName.errors?.required && formControls.firstName.touched" class="text-danger">
+                    First name is required.
                   </div>
                 </div>
               </div>
-  
-              <!-- Email input -->
-              <div class="form-outline mb-4">
-                <input type="email" formControlName="email" id="form3Example3" class="form-control" />
-                <label class="form-label" for="form3Example3">Email address</label>
+              <div class="col-md-6 mb-4">
+                <div class="form-outline">
+                  <input type="text" formControlName="lastName" id="form3Example2" class="form-control" />
+                  <label class="form-label" for="form3Example2">Last name</label>
+                  <div *ngIf="formControls.lastName.errors?.required && formControls.lastName.touched" class="text-danger">
+                    Last name is required.
+                  </div>
+                </div>
               </div>
-              <div class="form-outline mb-4">
-                <input type="number" formControlName="roleId" id="form3Example3" class="form-control" />
-                <label class="form-label" for="form3Example3">RoleID</label>
+            </div>
+
+            <div class="form-outline mb-4">
+              <input type="email" formControlName="email" id="form3Example3" class="form-control" />
+              <label class="form-label" for="form3Example3">Email address</label>
+              <div *ngIf="formControls.email.errors?.required && formControls.email.touched" class="text-danger">
+                Email address is required.
               </div>
+            </div>
 
-            
-  
+            <div class="form-outline mb-4">
+              <input type="number" formControlName="roleId" id="form3Example3" class="form-control" />
+              <label class="form-label" for="form3Example3">RoleID</label>
+              <div *ngIf="formControls.roleId.errors?.required && formControls.roleId.touched" class="text-danger">
+                RoleID is required.
+              </div>
+            </div>
 
-  
-              <!-- Submit button -->
-              <button type="submit" class="btn btn-primary btn-block mb-4">
-                create
-              </button>
-  
-              <!-- Register buttons -->
-              
-            </form>
-          </div>
+            <!-- Submit button -->
+            <button type="submit" class="btn btn-primary btn-block mb-4">
+              Create
+            </button>
+          </form>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
+
   <!-- Section: Design Block -->
