--- a/src/app/sign-in/sign-up/sign-up.component.html
+++ b/src/app/sign-in/sign-up/sign-up.component.html
@@ -1,102 +1,100 @@
-
-
-<!-- Section: Design Block -->
 <section class="background-radial-gradient overflow-hidden">
-    <style>
-      .background-radial-gradient {
-        /* background-color: hsl(218, 41%, 15%); */
-        background-image: radial-gradient(657px circle at 0% 0%,
-            hsl(218, 41%, 35%) 5%,
-            hsl(218, 41%, 10%) 30%,
-            hsl(200, 41%, 20%) 95%,
-            hsl(29, 41%, 19%) 80%,
-            transparent 100%),
-          radial-gradient(1250px circle at 100% 100%,
-            hsl(218, 41%, 45%) 15%,
-            hsl(218, 41%, 30%) 35%,
-            hsl(218, 41%, 20%) 75%,
-            hsl(218, 41%, 19%) 90%,
-            transparent 100%);
-      }
-  
-      #radius-shape-1 {
-        height: 220px;
-        width: 220px;
-        top: -60px;
-        left: -130px;
-        background: radial-gradient(#44006b, #ad1fff);
-        overflow: hidden;
-      }
-  
-      #radius-shape-2 {
-        border-radius: 38% 62% 63% 37% / 70% 33% 67% 30%;
-        bottom: -60px;
-        right: -110px;
-        width: 300px;
-        height: 300px;
-        background: radial-gradient(#44006b, #ad1fff);
-        overflow: hidden;
-      }
-  
-      .bg-glass {
-        background-color: hsla(0, 0%, 100%, 0.9) !important;
-        backdrop-filter: saturate(200%) blur(25px);
-      }
-    </style>
-  
-    <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5">
-      <div class="row gx-lg-5 align-items-center mb-5">
-        <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
-          <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(177, 53%, 40%)">
-            A V Bank <br />
-            <span style="color: hsl(218, 81%, 75%)">Welcome</span>
-          </h1>
-          <p class="mb-4 opacity-70" style="color: hsl(219, 42%, 37%)">
+  <style>
+    .background-radial-gradient {
+      /* background-color: hsl(218, 41%, 15%); */
+      background-image: radial-gradient(657px circle at 0% 0%,
+          hsl(218, 41%, 35%) 5%,
+          hsl(218, 41%, 10%) 30%,
+          hsl(200, 41%, 20%) 95%,
+          hsl(29, 41%, 19%) 80%,
+          transparent 100%),
+        radial-gradient(1250px circle at 100% 100%,
+          hsl(218, 41%, 45%) 15%,
+          hsl(218, 41%, 30%) 35%,
+          hsl(218, 41%, 20%) 75%,
+          hsl(218, 41%, 19%) 90%,
+          transparent 100%);
+    }
 
-          </p>    
-        </div>
-        <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
-          <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
-          <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
-  
-          <div class="card bg-glass">
-            <div class="card-body px-4 py-5 px-md-5">
-              <form>
-                 <form [formGroup]="loginForm" (ngSubmit)="loginUser(loginForm.value)" >
-                <div class="row">
-                    
-                  <div class="form-outline mb-4">
-                    <h1>Login</h1><br><br>
-                    <div class="form-outline">
-                      <input type="text"  class="form-control" formControlName="userName"/>
-                      <label class="form-label" >User Name</label>
+    #radius-shape-1 {
+      height: 220px;
+      width: 220px;
+      top: -60px;
+      left: -130px;
+      background: radial-gradient(#44006b, #ad1fff);
+      overflow: hidden;
+    }
+
+    #radius-shape-2 {
+      border-radius: 38% 62% 63% 37% / 70% 33% 67% 30%;
+      bottom: -60px;
+      right: -110px;
+      width: 300px;
+      height: 300px;
+      background: radial-gradient(#44006b, #ad1fff);
+      overflow: hidden;
+    }
+
+    .bg-glass {
+      background-color: hsla(0, 0%, 100%, 0.9) !important;
+      backdrop-filter: saturate(200%) blur(25px);
+    }
+  </style>
+
+  <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5">
+    <div class="row gx-lg-5 align-items-center mb-5">
+      <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
+        <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(177, 53%, 40%)">
+          A V Bank <br />
+          <span style="color: hsl(218, 81%, 75%)">Welcome</span>
+        </h1>
+        <p class="mb-4 opacity-70" style="color: hsl(219, 42%, 37%)">
+
+        </p>
+      </div>
+      <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
+        <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
+        <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
+
+        <div class="card bg-glass">
+          <div class="card-body px-4 py-5 px-md-5">
+            <form [formGroup]="loginForm" (ngSubmit)="loginUser(loginForm.value)">
+              <div class="row">
+                <div class="form-outline mb-4">
+                  <h1>Login</h1><br><br>
+                  <div class="form-outline">
+                    <input type="text" class="form-control" formControlName="userName" />
+                    <label class="form-label">User Name</label>
+                    <div *ngIf="formControls.userName.errors?.required && formControls.userName.touched" class="text-danger">
+                      User Name is required.
                     </div>
                   </div>
                 </div>
+              </div>
 
-                <!-- Password input -->
-                <div class="form-outline mb-4">
-                  <input type="password"  class="form-control"  formControlName="password"/>
-                  <label class="form-label"   >Password</label>
+              <!-- Password input -->
+              <div class="form-outline mb-4">
+                <input type="password" class="form-control" formControlName="password" />
+                <label class="form-label">Password</label>
+                <div *ngIf="formControls.password.errors?.required && formControls.password.touched" class="text-danger">
+                  Password is required.
                 </div>
-                <!-- printing error message -->
-                <div class="alert alert-danger" *ngIf="showError">
-                  <strong>Not Allowed</strong> {{errorMessage}}
-              </div >
-                <!-- Submit button -->
-                <button type="submit" class="btn btn-primary btn-block mb-4">
-                  Sign up
-                </button>
-                <p class="mb-5 pb-lg-2" style="color: #404ab8;">Don't have an account? <a routerLink="/createCustomer" 
-                    style="color: #2832a3;">Register here</a></p>   
-                </form>
-              </form>
-              <a routerLink="/userHome" 
-              style="color: #2832a3;">Rrrrr</a>
-            </div>
+              </div>
+              <!-- printing error message -->
+              <div class="alert alert-danger" *ngIf="showError">
+                <strong>Not Allowed</strong> {{ errorMessage }}
+              </div>
+              <!-- Submit button -->
+              <button type="submit" class="btn btn-primary btn-block mb-4">
+                Sign up
+              </button>
+              <p class="mb-5 pb-lg-2" style="color: #404ab8;">Don't have an account? <a routerLink="/createCustomer"
+                  style="color: #2832a3;">Register here</a></p>
+            </form>
+            <a routerLink="/userHome" style="color: #2832a3;">Rrrrr</a>
           </div>
         </div>
       </div>
     </div>
-  </section>
-  <!-- Section: Design Block -->
+  </div>
+</section>
